Added Launch TradeSmart functionality on HelloWorld app

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 	<script src="init.js"></script>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Welcome to Central</h1>
+	<div><button id="launch-tradesmart">Launch TradeSmart</button></div>
   </body>
 </html>
